tests/valid/optimize.mc
int main() {
    int x;
    x = 2 * 3 + 4;
    write(x);
    return 0;
}
