tests/invalid_semantic/undefined_var.mc
int main() {
    int x;
    y = x + 1;
    return 0;
}
